generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ENUMS

enum OAuthProvider {
  google
  github
}

enum Role {
  owner
  admin
  member
}

enum TaskStatus {
  todo
  in_progress
  done
}

enum Plan {
  free
  pro
  enterprise
}

enum WebhookEvent {
  task_created
  task_updated
  member_invited
}

// =========================
// USER & AUTH
// =========================

model User {
  id                     String    @id @default(uuid())
  email                  String    @unique
  passwordHash           String?
  fullName               String?
  avatarUrl              String?
  emailVerificationToken String?
  isEmailVerified        Boolean   @default(false)
  resetPasswordToken     String?
  resetPasswordExpires   DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  oauthAccounts OAuthAccount[]
  memberships   Membership[]
  ownedOrgs     Organization[] @relation("OrgOwner")

  createdProjects Project[] @relation("ProjectCreator")
  createdTasks    Task[]    @relation("TaskCreator")
  assignedTasks   Task[]    @relation("TaskAssignee")

  sessions      Session[]
  refreshTokens RefreshToken[]
  auditLogs     AuditLog[]
  invitations   Invitation[]
  ProjectMember ProjectMember[]
}

// =========================
// SESSION TRACKING (NEW)
// =========================

model Session {
  id     String @id @default(uuid())
  userId String

  ipAddress String?
  userAgent String?
  lastSeen  DateTime @default(now())

  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

// =========================
// OAUTH
// =========================

model OAuthAccount {
  id             String        @id @default(uuid())
  userId         String
  provider       OAuthProvider
  providerUserId String
  accessToken    String?
  refreshToken   String?

  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerUserId])
}

// =========================
// ORGANIZATION
// =========================

model Organization {
  id   String @id @default(uuid())
  name String

  ownerId String
  owner   User   @relation("OrgOwner", fields: [ownerId], references: [id])

  plan Plan @default(free)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  memberships Membership[]
  projects    Project[]
  invitations Invitation[]
  auditLogs   AuditLog[]
  webhooks    Webhook[]
}

// =========================
// MEMBERSHIP + RBAC
// =========================

model Membership {
  id             String @id @default(uuid())
  userId         String
  organizationId String
  role           Role

  joinedAt DateTime @default(now())

  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@unique([userId, organizationId])
}

// =========================
// PERMISSIONS (PBAC - NEW)
// =========================

model Permission {
  id             String           @id @default(uuid())
  name           String           @unique // e.g. "task:update"
  RolePermission RolePermission[]
}

model RolePermission {
  id           String @id @default(uuid())
  role         Role
  permissionId String

  permission Permission @relation(fields: [permissionId], references: [id])

  @@unique([role, permissionId])
}

// =========================
// PROJECTS
// =========================

model Project {
  id             String @id @default(uuid())
  organizationId String

  name        String
  description String?

  createdById String

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  createdBy    User         @relation("ProjectCreator", fields: [createdById], references: [id])

  members ProjectMember[]
  tasks   Task[]
}

// =========================
// PROJECT MEMBERS (NEW)
// =========================

model ProjectMember {
  id        String @id @default(uuid())
  projectId String
  userId    String

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([projectId, userId])
}

// =========================
// TASKS
// =========================

model Task {
  id        String @id @default(uuid())
  projectId String

  title       String
  description String?
  status      TaskStatus @default(todo)

  assignedToId String?
  createdById  String

  dueDate DateTime?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  assignedTo User? @relation("TaskAssignee", fields: [assignedToId], references: [id])
  createdBy  User  @relation("TaskCreator", fields: [createdById], references: [id])

  attachments FileAttachment[]
}

// =========================
// FILE ATTACHMENTS (NEW)
// =========================

model FileAttachment {
  id     String @id @default(uuid())
  taskId String

  fileName String
  fileUrl  String
  fileSize Int?

  createdAt DateTime @default(now())

  task Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
}

// =========================
// INVITATIONS
// =========================

model Invitation {
  id             String @id @default(uuid())
  organizationId String

  email String
  role  Role

  token String @unique

  invitedById String

  expiresAt  DateTime
  acceptedAt DateTime?

  createdAt DateTime @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  invitedBy    User         @relation(fields: [invitedById], references: [id])
}

// =========================
// REFRESH TOKENS (SECURE)
// =========================

model RefreshToken {
  id     String @id @default(uuid())
  userId String

  tokenHash String   @unique // 🔥 store hashed version
  expiresAt DateTime
  revoked   Boolean  @default(false)

  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

// =========================
// WEBHOOKS (NEW)
// =========================

model Webhook {
  id             String @id @default(uuid())
  organizationId String

  url    String
  secret String

  events WebhookEvent[]

  createdAt DateTime @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
}

// =========================
// AUDIT LOGS
// =========================

model AuditLog {
  id String @id @default(uuid())

  userId         String?
  organizationId String?

  action     String
  entityType String
  entityId   String

  metadata Json?

  createdAt DateTime @default(now())

  user         User?         @relation(fields: [userId], references: [id])
  organization Organization? @relation(fields: [organizationId], references: [id])
}
