erDiagram

    User {
        uuid id PK
        string email UK
        string passwordHash
        string fullName
        string avatarUrl
        string emailVerificationToken
        boolean isEmailVerified
        string resetPasswordToken
        datetime resetPasswordExpires
        datetime createdAt
        datetime updatedAt
    }

    Session {
        uuid id PK
        uuid userId FK
        string ipAddress
        string userAgent
        datetime lastSeen
        datetime createdAt
    }

    OAuthAccount {
        uuid id PK
        uuid userId FK
        OAuthProvider provider
        string providerUserId
        string accessToken
        string refreshToken
        datetime createdAt
    }

    Organization {
        uuid id PK
        string name
        uuid ownerId FK
        Plan plan
        datetime createdAt
        datetime updatedAt
        datetime deletedAt
    }

    Membership {
        uuid id PK
        uuid userId FK
        uuid organizationId FK
        Role role
        datetime joinedAt
    }

    Permission {
        uuid id PK
        string name UK
    }

    RolePermission {
        uuid id PK
        Role role
        uuid permissionId FK
    }

    Project {
        uuid id PK
        uuid organizationId FK
        string name
        string description
        uuid createdById FK
        datetime createdAt
        datetime updatedAt
        datetime deletedAt
    }

    ProjectMember {
        uuid id PK
        uuid projectId FK
        uuid userId FK
    }

    Task {
        uuid id PK
        uuid projectId FK
        string title
        string description
        TaskStatus status
        uuid assignedToId FK
        uuid createdById FK
        datetime dueDate
        datetime createdAt
        datetime updatedAt
        datetime deletedAt
    }

    FileAttachment {
        uuid id PK
        uuid taskId FK
        string fileName
        string fileUrl
        int fileSize
        datetime createdAt
    }

    Invitation {
        uuid id PK
        uuid organizationId FK
        string email
        Role role
        string token UK
        uuid invitedById FK
        datetime expiresAt
        datetime acceptedAt
        datetime createdAt
    }

    RefreshToken {
        uuid id PK
        uuid userId FK
        string tokenHash UK
        datetime expiresAt
        boolean revoked
        datetime createdAt
    }

    Webhook {
        uuid id PK
        uuid organizationId FK
        string url
        string secret
        WebhookEvent[] events
        datetime createdAt
    }

    AuditLog {
        uuid id PK
        uuid userId FK
        uuid organizationId FK
        string action
        string entityType
        string entityId
        json metadata
        datetime createdAt
    }

    User ||--o{ Session : "has sessions"
    User ||--o{ OAuthAccount : "has oauth"
    User ||--o{ Membership : "has memberships"
    User ||--o{ Organization : "owns"
    User ||--o{ Project : "created"
    User ||--o{ Task : "created"
    User ||--o{ Task : "assigned to"
    User ||--o{ RefreshToken : "has tokens"
    User ||--o{ AuditLog : "performed"
    User ||--o{ Invitation : "invited by"
    User ||--o{ ProjectMember : "member of"

    Organization ||--o{ Membership : "has members"
    Organization ||--o{ Project : "has projects"
    Organization ||--o{ Invitation : "has invitations"
    Organization ||--o{ AuditLog : "has logs"
    Organization ||--o{ Webhook : "has webhooks"

    Permission ||--o{ RolePermission : "granted to"

    Project ||--o{ Task : "contains"
    Project ||--o{ ProjectMember : "has members"

    Task ||--o{ FileAttachment : "has files"
